add states to components in order to resize the iframe accordingly

--- a/public/app/views/layouts/main.handlebars
+++ b/public/app/views/layouts/main.handlebars
@@ -256,9 +256,7 @@
 	</section>
 
 	<script>
-		window.carpenter = {
-			port: {{ port }}
-		};
+		window.carpenter = {{{ stringify config }}};
 	</script>
 	<script src="/assets/js/app.js"></script>
 </body>
