--- a/public/app/views/components.handlebars
+++ b/public/app/views/components.handlebars
@@ -94,6 +94,7 @@
 
 		<script>
 			function resizeIframe(obj) {
+				obj.style.height = '1px';
 				obj.style.height = obj.contentWindow.document.body.scrollHeight + 40 + 'px';
 			}
 		</script>
@@ -131,13 +132,37 @@
 					onload="resizeIframe(this)"
 					id="view-variant-{{sanitizeAttribute this.key}}"
 				></iframe>
-				<a href="#view-variant-{{sanitizeAttribute this.key}}-iframe-wrapper"
-					class="components__iframe-wrapper-fullscreen"
-					is="s-activate"
-					toggle
-				>
-					<i class="fa fa-arrows-alt"></i>
-				</a>
+
+				<div class="components__iframe-wrapper-actions">
+					{{#if ../config.components.states}}
+						{{#each ../config.components.states}}
+							<a class="components__iframe-wrapper-action"
+								href="#"
+								onclick="
+									document.querySelector('#view-variant-{{sanitizeAttribute ../this.key}}-iframe-wrapper').style.width = {{#if this}}'{{this}}px'{{else}}null{{/if}};
+									resizeIframe(document.querySelector('#view-variant-{{sanitizeAttribute ../this.key}}'));
+								"
+								title="{{ @key }}"
+							>
+								<i class="fa fa-{{ @key }}"></i>
+								<span class="tooltip tooltip--secondary">
+									{{ @key }}
+								</span>
+							</a>
+						{{/each}}
+					{{/if}}
+					<a href="#view-variant-{{sanitizeAttribute this.key}}-iframe-wrapper"
+						class="components__iframe-wrapper-action"
+						is="s-activate"
+						active-class="fullscreen"
+						toggle
+					>
+						<i class="fa fa-arrows-alt"></i>
+						<span class="tooltip tooltip--secondary">
+							fullscreen
+						</span>
+					</a>
+				</div>
 			</div>
 
 			{{#if this.value.dataContent}}
