update components display

--- a/app/views/atoms/button-twig/button-twig.twig
+++ b/app/views/atoms/button-twig/button-twig.twig
@@ -1,6 +1,7 @@
 <a class="btn btn--{{ color|default('default') }} btn--{{ type|default('default') }}"
 	title="{{ title }}"
 	target="{{ target|default('_self') }}"
+	href="{{ url }}"
 >
 	{{ label }}
 </a>
