--- a/public/assets-src/sass/07_objects/_all.scss
+++ b/public/assets-src/sass/07_objects/_all.scss
@@ -3,8 +3,10 @@
  * All the objects styling.
  * An object response to the same rules has the blocks, unless they cannot contain any other objects or blocks.
  */
-@import 'btn',
+@import 'badge',
+		'btn',
 		'coffeekraken-logo',
+		'dropdown',
 		'gravatar',
 		'list',
 		'preview-color',
