some small fixes and updates

--- a/public/app/views/components.handlebars
+++ b/public/app/views/components.handlebars
@@ -94,7 +94,7 @@
 					group="components"
 					save-state
 				>
-					Todo ({{ components.metas.todo.length }})
+					Todo <span class="badge badge--primary">{{ components.metas.todo.length }}</span>
 				</a>
 			</div>
 		{{/if}}
