--- a/public/assets-src/sass/07_objects/_badge.scss
+++ b/public/assets-src/sass/07_objects/_badge.scss
@@ -1,14 +1,20 @@
 .badge {
-	font-size: .5em;
+	font-size: 1em;
 	color: white;
 	display:inline-block;
 	width: 2em; height:2em;
 	text-align: center;
-	line-height: 1.85em;
+	line-height: 2em;
 	border-radius: 50%;
+	transform: scale(.7,.7);
+	font-weight: bold;
 }
 	@each $colorName, $color in s-setting('colors') {
-		.badge--#{$colorName} {
+		$sel : ".badge--#{$colorName}";
+		@if $colorName == default {
+			$sel : ".badge";
+		}
+		#{$sel} {
 			background-color: s-color($colorName);
 		}
 	}
